hid backside on initial load to avoid stretching of homepage until button is clicked -- for tablets and under

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,7 +37,6 @@ html {
   background-color: #191919;
   margin: 0 auto;
   padding: 2%;
-  margin-bottom: 5%;
   backdrop-filter: blur(25px);
   border-radius: 16px;
   border: 1px solid #F1F1F0;
@@ -76,7 +75,7 @@ html {
   align-items: center;
 }
 
-@media (max-width: 425) {
+@media (max-width: 425px) {
   .bioLeftTop {
     display: block;
   }
